Replaced div with footer tag on footer area. Updated CSS for footer

--- a/index.html
+++ b/index.html
@@ -88,13 +88,15 @@
         </div>
     </div>
 
-    
-    <div class="footer">
+    <!-- Footer -->
+    <!-- Replaced <div> with <footer> tag -->
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
+    
 </body>
 
 </html>
