Consolidated 3 services classes into a 'services-article' class and 3 benefits classes into a 'benefits-article' class as styling are same

--- a/index.html
+++ b/index.html
@@ -38,27 +38,29 @@
     <section class="hero"></section>
 
 
-    <!-- Main Content -->
+    <!-- Services Section -->
     <!-- Added 'alt' to all the <img> tags -->
     <!-- Made the Search Engine Optimization link work from the navigator by adding id -->
     <!-- Replaced div tags with section and article tags for services area and benefits area -->
     <!-- Renamed 'content' class to 'services' to be more specific of the content for this section. -->
+    <!--Consolidated search-engine-optimization, online-reputation-management, social-media-marketing classes 
+        into single 'services-article' class as the styling for all are same.-->
     <section class="services">
-        <article id="search-engine-optimization" class="search-engine-optimization"> 
+        <article id="search-engine-optimization" class="services-article"> 
             <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
-        <article id="online-reputation-management" class="online-reputation-management">
+        <article id="online-reputation-management" class="services-article">
             <img src="./assets/images/online-reputation-management.jpg" alt="Online Reputation Management" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
-        <article id="social-media-marketing" class="social-media-marketing">
+        <article id="social-media-marketing" class="services-article">
             <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Marketing" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -67,22 +69,25 @@
         </article>
     </section>
 
+    <!-- Benefit Section -->
+    <!--Consolidated benefit-lead, benefit-brand, benefit-cost classes into single 'benefits-article' class 
+        as the styling for all are same. Added id for each of them so that styling can be done for each if needed later. -->
     <section class="benefits">
-        <article class="benefit-lead">
+        <article id="benefit-lead" class="benefits-article">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Lead Generation"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </article>
-        <article class="benefit-brand">
+        <article id="benefit-brand" class="benefits-article">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Brand Awareness"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </article>
-        <article class="benefit-cost">
+        <article id="benefit-cost" class="benefits-article">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Cost Management"/>
             <p>
